--- a/demos/camera/src/main/res/layout/main_fragment.xml
+++ b/demos/camera/src/main/res/layout/main_fragment.xml
@@ -15,17 +15,25 @@
         android:layout_height="match_parent"
         android:keepScreenOn="true">
 
-        <io.github.thibaultbee.streampack.ui.views.PreviewView
-            android:id="@+id/preview"
+        <FrameLayout
+            android:id="@+id/previewContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:enableZoomOnPinch="true"
             app:layout_constraintBottom_toTopOf="@+id/liveButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:position="center"
-            app:scaleMode="fill" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <io.github.thibaultbee.streampack.ui.views.PreviewView
+                android:id="@+id/preview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:enableZoomOnPinch="true"
+                app:position="center"
+                app:scaleMode="fill" />
+
+            <!-- RTMP preview will be added programmatically on top -->
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -53,6 +61,13 @@
                 android:onClick="@{() -> viewmodel.toggleVideoSource()}"
                 android:src="@drawable/ic_switch_camera_24px"
                 app:tint="@android:color/white" />
+
+            <Button
+                android:id="@+id/showRtmpPreviewButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Show RTMP Preview"
+                android:contentDescription="Show RTMP Preview" />
 
         </LinearLayout>
 
