--- a/demos/camera/src/main/res/layout/main_fragment.xml
+++ b/demos/camera/src/main/res/layout/main_fragment.xml
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:position="center"
-            app:scaleMode="fill" />
+            app:scaleMode="fit" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -50,7 +50,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/switch_camera_source"
-                android:onClick="@{() -> viewmodel.toggleVideoSource()}"
                 android:src="@drawable/ic_switch_camera_24px"
                 app:tint="@android:color/white" />
 
@@ -172,5 +171,14 @@
 
 
         </LinearLayout>
+
+        <io.github.thibaultbee.streampack.app.ui.main.BufferVisualizerView
+            android:id="@+id/bufferVisualizer"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="64dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
